# pwasm-erc777

./: .gitignore  README.md  package-lock.json  package.json
.circleci/: config.yml
contracts/pwasm-erc777/: Cargo.toml  build.sh  test.sh
contracts/pwasm-erc777/src/: ERC777.rs  ERC777TokensRecipient.rs  ERC777TokensSender.rs  ERC820Registry.rs  keys.rs  lib.rs  utils.rs
parity_data/keys/DevelopmentChain/: test_key.json
scripts/: parity_binary_path.sh  run_dev_chain.sh  test.sh
scripts/specs/: wasm-dev-chain.json
test/: erc777.spec.js
test/utils/: attributes.js  burn.js  index.js  mint.js  operatorBurn.js  operatorSend.js  send.js
