[package]
name = "pwasm-erc777"
version = "0.1.0"
authors = ["David Forstenlechner <dfo@lab10.coop>"]
edition = "2018"

[dependencies]
pwasm-std = "0.13"
pwasm-ethereum = "0.8"
pwasm-abi = "0.2.2"
pwasm-abi-derive = "0.2.2"
compiletime-keccak = { git = "https://github.com/lab10-coop/compiletime-keccak.git" }

[dev-dependencies.pwasm-test]
git = "https://github.com/paritytech/pwasm-test"
default-features = false

[lib]
crate-type = ["cdylib"]

[features]
std = ["pwasm-std/std", "pwasm-ethereum/std", "pwasm-test/std"]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
